# maya

./: .gitignore  Cargo.toml  LICENSE  README.md  _headers  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.llm.config.ts  wrangler.jsonc
crates/worldsim/: Cargo.toml
crates/worldsim/.cargo/: config.toml
crates/worldsim/src/: catchup.rs  clock.rs  eco.rs  engine.rs  engine_bin.rs  lib.rs  rng.rs  simrng.rs  spatialhash.rs  steering.rs  structstore.rs  world.rs  worldgen.rs
crates/worldsim/src/emergent/: genome.rs  mod.rs  needs.rs  primitives.rs  utility.rs
docs/: big-world.md  cases.md  crowd-separation.md  emergent-behavior.md  ideas-queue.md  npc-movement.md  relative-spacing.md  robust-pipeline.md  self-sustaining-world.md  sim-decisions.md  spread-redesign.md  world-data-architecture.md
scripts/: fetch-test-model.mjs  postbuild-hash-wasm.mjs  version-wasm.mjs
src/: app.css  app.d.ts
src/lib/: agents.svelte.ts  boot.svelte.ts  buildFx.ts  city.ts  clock.test.ts  clock.ts  curveWorld.ts  debug.ts  demoWorld.json  editor.svelte.ts  engine.test.ts  engine.ts  eventLog.svelte.ts  fastforward.test.ts  fish.svelte.ts  gpu.svelte.ts  history.svelte.ts  kinds.test.ts  kinds.ts  llm-prompt.ts  llm-worker.ts  llm.svelte.ts  math.ts  nature.svelte.ts  perf.svelte.ts  playerState.svelte.ts  profiler.svelte.ts  quality.svelte.ts  rng.test.ts  rng.ts  rustMath.ts  rustSim.ts  scatter.ts  settlementPlanner.ts  share.test.ts  share.ts  sharedAssets.ts  sim.ts  spatialhash.ts  steering.ts  (+20 more)
src/lib/components/: AdaptiveResolution.svelte  AgentImpostors.svelte  AgentSystem.svelte  AmbientParticles.svelte  AmbientScatter.svelte  Aurora.svelte  Birds.svelte  Bridges.svelte  BuildBar.svelte  Building.svelte  BuildingGlow.svelte  BuildingImpostors.svelte  Bushes.svelte  Butterflies.svelte  Chimneys.svelte  Clouds.svelte  CreatureShadows.svelte  Critter.svelte  DustPuffs.svelte  EcoStats.svelte  EditController.svelte  EventLog.svelte  FallingLeaves.svelte  Fences.svelte  Flowers.svelte  FootPrints.svelte  FpsPanel.svelte  Grass.svelte  Graves.svelte  InstancedCreatures.svelte  IntroDialog.svelte  LakeFish.svelte  Lamp.svelte  LampGlow.svelte  LoveHearts.svelte  Mist.svelte  ModelPicker.svelte  Moon.svelte  MoveGhost.svelte  Npc.svelte  (+22 more)
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/input/: input.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/api/debug/: +server.ts
src/routes/api/telemetry/: +server.ts
src/routes/api/world/: +server.ts
static/: .assetsignore  crux-test.html
static/worldsim/: worldsim.js  worldsim_bg.wasm
tests/llm/: crux.test.ts  scenarios.ts
training/: README.md  _mlc_convert.sh  convert-mlc.sh  eval-emit.ts  eval-grade.ts  eval-native.py  fuse.sh  gen-dataset.ts  mlc-prebuilt.patch  to_gguf.sh  train_lora.sh
