# Cargo workspace root — the Rust/WASM engine core lives under crates/ (docs/self-sustaining-world.md §6.6).
# This lets `cargo test` / rust-analyzer resolve from the repo root; the SvelteKit app ignores this file.
[workspace]
members = ["crates/worldsim"]
resolver = "2"

# release profile lives at the workspace root (cargo ignores member-package profiles)
[profile.release]
opt-level = 3
lto = true
