[package]
name = "worldsim"
version = "0.1.0"
edition = "2021"
description = "Headless deterministic world-sim core (Rust/WASM) — engine port Phase 0 (docs/self-sustaining-world.md §6.6)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# The engine port (op application + world JSON) uses jzon — a fast DOM JSON lib (continuation of json-rust). DOM
# round-trips unknown world fields for free (no serde structs to keep in sync); the user picked it for speed.
[dependencies]
jzon = "0.12"

# wasm-bindgen only on the wasm target → native `cargo test` (parity checks) stays dependency-light + fast.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# Squeeze the shipped wasm: full LTO + a single codegen unit let LLVM inline + vectorize across the whole sim
# (compounds with the +simd128 flag), and abort-on-panic trims the unwinding tables. Slower compile, faster +
# smaller runtime — the right trade for a hot engine the player runs every frame. (wasm-pack builds --release.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
