[package]
name = "worldsim"
version = "0.1.0"
edition = "2021"
description = "Headless deterministic world-sim core (Rust/WASM) — engine port Phase 0 (docs/self-sustaining-world.md §6.6)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# The op-engine + world-gen are a fully BINARY (typed-struct, no-JSON) implementation now, so the crate has no
# runtime DOM-JSON dependency — values cross the wasm boundary as flat typed arrays + parallel string vecs.
[dependencies]

# wasm-bindgen only on the wasm target → native `cargo test` (parity checks) stays dependency-light + fast.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# Squeeze the shipped wasm: full LTO + a single codegen unit let LLVM inline + vectorize across the whole sim
# (compounds with the +simd128 flag), and abort-on-panic trims the unwinding tables. Slower compile, faster +
# smaller runtime — the right trade for a hot engine the player runs every frame. (wasm-pack builds --release.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
